--- a/config/storage.yml
+++ b/config/storage.yml
@@ -12,7 +12,7 @@ amazon:
   access_key_id: <%= Rails.application.credentials.dig(:awss3, :access_key_id) %>
   secret_access_key: <%= Rails.application.credentials.dig(:awss3, :secret_access_key) %>
   region: eu-central-1
-  bucket: corsego-production
+  bucket: Islam4Kids-production
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
