--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "corsego",
+  "name": "Islam4Kids",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.14.0",
