--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jquery-ui-dist": "^1.12.1",
     "popper.js": "^1.16.1",
     "selectize": "^0.12.6",
+    "tinymce": "^5.7.0",
     "trix": "^1.0.0",
     "turbolinks": "^5.2.0"
   },
